--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
+    "deploy": "vercel",
     "postinstall": "quasar prepare"
   },
   "dependencies": {
